# cppexperiment

./: .gitignore  CMakeLists.txt  foldexpression.cpp  headers.h  main.cpp
include/: headers.h  pch.h
src/: CMakeLists.txt  pch.cpp
src/filesystem/: CMakeLists.txt  filesystem.cpp
src/foldexpression/: CMakeLists.txt  foldexpression.cpp
src/output/: CMakeLists.txt  output.cpp
src/threeway/: CMakeLists.txt  threeway.cpp
